--- a/hugo.toml
+++ b/hugo.toml
@@ -42,7 +42,7 @@ copyright = "© Copyright notice"
 	#]
 
 	# Github base url
-	github = "https://github.com/nayakashwin/nayakashwin.github.io.git"
+	#github = "https://github.com/nayakashwin/nayakashwin.github.io.git"
 
 	# For statistics, we can compare the total word count against a book of your choice
 	statisticsEnabled = true
